--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@ placeholder="Enter letters (e.g. TRAIN)"
 <button id="resetLettersBtn" class="btn-reset">🗑 Clear</button>
 </div>
 
-<div id="words"></div>
 
-<div id="canvas"></div>
+
+<div id="canvas">
+	<div id="words"></div>
+</div>
 
 <script src="script.js?v=1"></script>
 </body>
 </html>
 
 	
+
