--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1 stlyle="colot:red"></h1>
+<h1 stlyle="colot:red">Github Pages Loaeded</h1>
 <div class="controls">
 <input id="wordInput" type="text" placeholder="Word lengths (e.g., 5 3 4)">
 <button id="buildBtn" class="btn-build">🧱 Build</button>
@@ -25,5 +25,6 @@
 <script src="script_new.js"></script>
 </body>
 </html>
+
 
 
