--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 <div id="words"></div>
 </div>
 
-<script src="script_new.js"></script>
+<script src="./script_new.js"></script>
 </body>
 </html>
+
 
 
 
