--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 <div id="canvas"></div>
 
 <!-- Link to JS in root -->
-<script src="./script.js"></script>
+<script src="./script_new.js"></script>
 </body>
 </html>
 
 	
+
