--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ tile.addEventListener('touchstart', startDrag, { passive: false });
 
 canvas.appendChild(tile);
 });
-document.getElementById('leters').value = '';
+document.getElementById('letters').value = '';
 }
 
 function startDrag(e) {
@@ -495,6 +495,7 @@ delete box.dataset.lastTap;
 </html>
 
 	
+
 
 
 
